Fix: AuthorizationServerConfig with collect(Collectors.toList());